namespace CabinetInfirmier;

public enum Sexe
{
    M,
    F
}